--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <button class="button" data-color="green">green</button>
       </header>
       <section class="section">
-        <h2 class="section__header">Kim jestem z zawodu?</h2>
+        <h2 class="section__header">Kim jestem z zawodu???</h2>
         <article class="section__article">
           
           <p class="article__paragraph">
