--- a/src/index.html
+++ b/src/index.html
@@ -33,16 +33,15 @@
         <article class="section__article">
           
           <p class="article__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis
-            molestias sapiente officia corporis tenetur consequuntur reiciendis
-            voluptatum unde est, ea, quam corrupti, quo quod odio sequi itaque nam
-            adipisci. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis
-            molestias sapiente officia corporis tenetur consequuntur reiciendis
-            voluptatum unde est, ea, quam corrupti, quo quod odio sequi itaque nam
-            adipisci. Lorem ipsum, dolor sit amet consectetur adipisicing el  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nobis
-            molestias sapiente officia corporis tenetur consequuntur reiciendis
-            voluptatum unde est, ea, quam corrupti, quo quod odio sequi itaque nam
-            adipisci. Lorem ipsum, dolor sit amet consectetur adipisicing elMagni repellendus atque nisi quaerat earum vero omnis, magnam fuga qui accusantium aut incidunt obcaecati fugiat nesciunt exercitationem vitae consectetur perferendis sit.
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
+         Paulina Kakareko
           </p>
           <div class="photo__container">
             <img class="article__photo" src="piotrus.jpg?as=webp" alt="zdjęcie Piotrusia">
