--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="'description" content="Moja pierwsza strona">
     <title>Pamiętniczek</title>
     <link rel="stylesheet" href="styles/main.scss" type="text/css" />
+    <meta property="og:title" content="Pamiętniczek">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Moja pierwsza strona">
+    <meta property="og:url" content="https://homepage-seven-sable.vercel.app/">
+    <meta property="og:image" content="./my_homepage.png">
+
+
     
    
   </head>
