--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="'description" content="Moja pierwsza strona">
+    <meta name="description" content="Moja pierwsza strona">
     <title>Pamiętniczek</title>
     <link rel="stylesheet" href="styles/main.scss" type="text/css" />
     <meta property="og:title" content="Pamiętniczek">
