--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="styles/main.scss" type="text/css" />
     <meta property="og:title" content="Pamiętniczek">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Moja pierwsza strona">
-    <meta property="og:url" content="https://homepage-seven-sable.vercel.app/">
+    <meta property="og:url" content="https://homepage-seven-sable.vercel.app">
     <meta property="og:image" content="./my_homepage.png">
 
 
