--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <meta property="og:title" content="Pamiętniczek">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://homepage-seven-sable.vercel.app">
-    <meta property="og:image" content="./my_homepage.png">
+    <meta property="og:image" content="./myhomepage.png">
+    <meta property="og:description" content="Moja pierwsza strona">
 
 
     
